--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@
             width: 800px;
             padding-left: 380px;
         }
-        ul{
-            font-size: 23px;
-            padding-left: 450px;
-        }
-        @media (max-width: 600px) {
+       
+        @media screen and (max-width: 768px) {
             h1{
                 font-size: 30px;
                 padding-top: 20px;
@@ -40,22 +37,29 @@
                 width: 320px;
                 padding-left: 2px;
             }
-            ul{
-                padding-left: 20px;
-                font-size: 17px;
-                padding-right: 10px;
-                text-align: justify;
+            
+        }
+        @media screen and (min-width: 320px) {
+            h1{
+                font-size: 20px;
+                text-align: center;
+            }
+            img{
+                height: 300px;
+                width: 50;
+                padding: 0;
+            }
+            li{
+                padding: 0;
+                margin: 0;
+                font-size: 15px;
+                text-align:justify;
             }
         }
     </style>
 </head>
 <body>
     <h1>Internship Certificate</h1>
-    <ul>
-        <li>Three month internship in a Senchola Technology Solution corporate company.</li>
-        <li>In this I am learning with Frontend as source  domain.</li>
-        <li>In this internship I have done various projects like html, css, reactjs, bootstrap etc. </li>
-    </ul>
     <img src="scenchola_page-0001.jpg" alt="">
 </body>
 </html>
